# GenCon

./: .gitignore  CMakeLists.txt  GenCon.code-workspace
src/: gencon.hpp  jplay.hpp
src/main/: gencon.cpp  jplay.cpp
src/wrap/: CMakeLists.txt  GenCon.swg  jplay.swg
